Agentforce/force-app/main/default/objects/SIC_Code__c/SIC_Code__c.object-meta.xml
<CustomObject>
    <label>SIC Code</label>
    <nameField>
        <label>SIC Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SIC Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>