Agentforce/force-app/main/default/objects/SIC_Code__c/fields/Customer_Sector__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sector__c</fullName>
    <label>Customer Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture and Food Industry</fullName>
            </value>
            <value>
                <fullName>Air Transportation</fullName>
            </value>
            <value>
                <fullName>Bank Services</fullName>
            </value>
            <value>
                <fullName>Building Contruction</fullName>
            </value>
            <value>
                <fullName>Business Services</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Chemical Industry</fullName>
            </value>
            <value>
                <fullName>Communications Services</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Electronic Industry</fullName>
            </value>
            <value>
                <fullName>Energy Production Industry</fullName>
            </value>
            <value>
                <fullName>Furniture Industry</fullName>
            </value>
            <value>
                <fullName>Glass and Concrete Industry</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Holding</fullName>
            </value>
            <value>
                <fullName>Hotel Industry</fullName>
            </value>
            <value>
                <fullName>Insurance Services</fullName>
            </value>
            <value>
                <fullName>Legal Services</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Machinery Industry</fullName>
            </value>
            <value>
                <fullName>Manufacturing Industry</fullName>
            </value>
            <value>
                <fullName>Media Industry</fullName>
            </value>
            <value>
                <fullName>Metal Industry</fullName>
            </value>
            <value>
                <fullName>Mining Industry</fullName>
            </value>
            <value>
                <fullName>Oil Industry</fullName>
            </value>
            <value>
                <fullName>Other Services</fullName>
            </value>
            <value>
                <fullName>Other Transportation</fullName>
            </value>
            <value>
                <fullName>Paper Industry</fullName>
            </value>
            <value>
                <fullName>Personal Services</fullName>
            </value>
            <value>
                <fullName>Plastics Industry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>