Agentforce/force-app/main/default/objects/SIC_Code__c/fields/OCS_Sector__c.field-meta.xml
<CustomField>
    <fullName>OCS_Sector__c</fullName>
    <label>OCS Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accommodation &amp; Food Services</fullName>
            </value>
            <value>
                <fullName>Agriculture, Forestry &amp; Fishing</fullName>
            </value>
            <value>
                <fullName>Arts, Entertainment &amp; Leisure</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Financial &amp; Insurance</fullName>
            </value>
            <value>
                <fullName>Government &amp; Public Sector</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Information &amp; Telecommunications</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Mining</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Property Management &amp; FM Services</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>