Agentforce/force-app/main/default/objects/SIC_Code__c/fields/OCS_Sub_Sector__c.field-meta.xml
<CustomField>
    <fullName>OCS_Sub_Sector__c</fullName>
    <label>OCS Sub Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting Services</fullName>
            </value>
            <value>
                <fullName>Aged Care</fullName>
            </value>
            <value>
                <fullName>Automotive &amp; Aircraft Manufacturing</fullName>
            </value>
            <value>
                <fullName>Aviation Transport</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>Blue Light</fullName>
            </value>
            <value>
                <fullName>Bulk / Department Stores</fullName>
            </value>
            <value>
                <fullName>Cafe, Restaurants &amp; Bars</fullName>
            </value>
            <value>
                <fullName>Car Showroom</fullName>
            </value>
            <value>
                <fullName>Central Government</fullName>
            </value>
            <value>
                <fullName>Civil Engineering</fullName>
            </value>
            <value>
                <fullName>Community Mall</fullName>
            </value>
            <value>
                <fullName>Computer System Design and Related Services</fullName>
            </value>
            <value>
                <fullName>Construction of Buildings</fullName>
            </value>
            <value>
                <fullName>Consumer Products Manufacturing</fullName>
            </value>
            <value>
                <fullName>Crop &amp; Animal Production</fullName>
            </value>
            <value>
                <fullName>Data Center</fullName>
            </value>
            <value>
                <fullName>Defence</fullName>
            </value>
            <value>
                <fullName>Electricity</fullName>
            </value>
            <value>
                <fullName>Electronics Manufacturing</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Fishing &amp; Aquaculture</fullName>
            </value>
            <value>
                <fullName>Food &amp; Beverage Manufacturing</fullName>
            </value>
            <value>
                <fullName>Food &amp; Beverage Services</fullName>
            </value>
            <value>
                <fullName>Forestry &amp; Logging</fullName>
            </value>
            <value>
                <fullName>Gambling Activities</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>General Manufacturing</fullName>
            </value>
            <value>
                <fullName>General Practitioners</fullName>
            </value>
            <value>
                <fullName>General Professional Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>