Agentforce/force-app/main/default/objects/SIC_Code__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DORMANT</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Agricultural Services</fullName>
            </value>
            <value>
                <fullName>Agricultural Production-Crops</fullName>
            </value>
            <value>
                <fullName>Agricultural Production-Livestock And Animal Specialties</fullName>
            </value>
            <value>
                <fullName>Fishing, Hunting, And Trapping</fullName>
            </value>
            <value>
                <fullName>Food And Kindred Products</fullName>
            </value>
            <value>
                <fullName>Transportation By Air</fullName>
            </value>
            <value>
                <fullName>Depository Institutions</fullName>
            </value>
            <value>
                <fullName>Nondepository Credit Institutions</fullName>
            </value>
            <value>
                <fullName>Security And Commodity Brokers, Dealers, Exchanges, And Services</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Building Construction-General Contractors And Operative Builders</fullName>
            </value>
            <value>
                <fullName>Heavy Construction Other Than Building Construction-Contractors</fullName>
            </value>
            <value>
                <fullName>Construction-Special Trade Contractors</fullName>
            </value>
            <value>
                <fullName>Business Services</fullName>
            </value>
            <value>
                <fullName>Engineering, Accounting, Research, Management, And Related Services</fullName>
            </value>
            <value>
                <fullName>Eating And Drinking Places</fullName>
            </value>
            <value>
                <fullName>Chemicals And Allied Products</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Educational Services</fullName>
            </value>
            <value>
                <fullName>Electronic And Other Electrical Equipment And Components, Except</fullName>
            </value>
            <value>
                <fullName>Measuring, Analyzing, And Controlling Instruments, Photographic,</fullName>
            </value>
            <value>
                <fullName>Electric, Gas, And Sanitary Services</fullName>
            </value>
            <value>
                <fullName>Furniture And Fixtures</fullName>
            </value>
            <value>
                <fullName>Stone, Clay, Glass, And Concrete Products</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Health Services</fullName>
            </value>
            <value>
                <fullName>Holding And Other Investment Offices</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>