Agentforce/force-app/main/default/objects/SIC_Code__c/fields/SIC_CaseSafeId__c.field-meta.xml
<CustomField>
    <fullName>SIC_CaseSafeId__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SIC CaseSafeId</label>
    <type>Text</type>
</CustomField>