Agentforce/force-app/main/default/objects/SIC_Code__c/fields/Sub_Sector__c.field-meta.xml
<CustomField>
    <fullName>Sub_Sector__c</fullName>
    <label>Sub Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Soil Preparation Services</fullName>
            </value>
            <value>
                <fullName>Crop Services</fullName>
            </value>
            <value>
                <fullName>Veterinary Services</fullName>
            </value>
            <value>
                <fullName>Animal Services, Except Veterinary</fullName>
            </value>
            <value>
                <fullName>Farm Labor And Management Services</fullName>
            </value>
            <value>
                <fullName>Landscape And Horticultural Services</fullName>
            </value>
            <value>
                <fullName>Cash Grains</fullName>
            </value>
            <value>
                <fullName>Field Crops, Except Cash Grains</fullName>
            </value>
            <value>
                <fullName>Vegetables And Melons</fullName>
            </value>
            <value>
                <fullName>Fruits And Tree Nuts</fullName>
            </value>
            <value>
                <fullName>Horticultural Specialties</fullName>
            </value>
            <value>
                <fullName>General Farms, Primarily Crop</fullName>
            </value>
            <value>
                <fullName>Livestock, Except Dairy And Poultry</fullName>
            </value>
            <value>
                <fullName>Dairy Farms</fullName>
            </value>
            <value>
                <fullName>Poultry And Eggs</fullName>
            </value>
            <value>
                <fullName>Animal Specialties</fullName>
            </value>
            <value>
                <fullName>General Farms, Primarily Livestock And Animal Specialties</fullName>
            </value>
            <value>
                <fullName>Commercial Fishing</fullName>
            </value>
            <value>
                <fullName>Fish Hatcheries And Preserves</fullName>
            </value>
            <value>
                <fullName>Hunting And Trapping, And Game Propagation</fullName>
            </value>
            <value>
                <fullName>Meat Products</fullName>
            </value>
            <value>
                <fullName>Dairy Products</fullName>
            </value>
            <value>
                <fullName>Canned, Frozen, And Preserved Fruits, Vegetables, And Food Special</fullName>
            </value>
            <value>
                <fullName>Grain Mill Products</fullName>
            </value>
            <value>
                <fullName>Bakery Products</fullName>
            </value>
            <value>
                <fullName>Sugar And Confectionery Products</fullName>
            </value>
            <value>
                <fullName>Fats And Oils</fullName>
            </value>
            <value>
                <fullName>Beverages</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Food Preparations And Kindred Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>