Agentforce/force-app/main/default/objects/SIC_Code__c/listViews/Agriculture_Forestry_Fishing.listView-meta.xml
<ListView>
    <fullName>Agriculture_Forestry_Fishing</fullName>
    <columns>NAME</columns>
    <columns>Sector__c</columns>
    <columns>Sub_Sector__c</columns>
    <columns>OCS_Sector__c</columns>
    <columns>OCS_Sub_Sector__c</columns>
    <columns>Customer_Sector__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OCS_Sector__c</field>
        <operation>equals</operation>
        <value>&quot;Agriculture, Forestry &amp; Fishing&quot;</value>
    </filters>
    <label>Agriculture, Forestry &amp; Fishing</label>
</ListView>