Agentforce/force-app/main/default/objects/SIC_Code__c/listViews/All_SIC_Codes.listView-meta.xml
<ListView>
    <fullName>All_SIC_Codes</fullName>
    <columns>NAME</columns>
    <columns>Customer_Sector__c</columns>
    <columns>Sector__c</columns>
    <columns>Sub_Sector__c</columns>
    <columns>OCS_Sector__c</columns>
    <columns>OCS_Sub_Sector__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All SIC Codes</label>
</ListView>