Agentforce/force-app/main/default/objects/SIC_Code__c/listViews/Arts_Entertainment_Leisure.listView-meta.xml
<ListView>
    <fullName>Arts_Entertainment_Leisure</fullName>
    <columns>NAME</columns>
    <columns>Sector__c</columns>
    <columns>Sub_Sector__c</columns>
    <columns>OCS_Sector__c</columns>
    <columns>OCS_Sub_Sector__c</columns>
    <columns>Customer_Sector__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OCS_Sector__c</field>
        <operation>equals</operation>
        <value>&quot;Arts, Entertainment &amp; Leisure&quot;</value>
    </filters>
    <label>Arts, Entertainment &amp; Leisure</label>
</ListView>