Agentforce/force-app/main/default/objects/SIC_Code__c/listViews/Construction.listView-meta.xml
<ListView>
    <fullName>Construction</fullName>
    <columns>NAME</columns>
    <columns>Sector__c</columns>
    <columns>Sub_Sector__c</columns>
    <columns>OCS_Sector__c</columns>
    <columns>OCS_Sub_Sector__c</columns>
    <columns>Customer_Sector__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OCS_Sector__c</field>
        <operation>equals</operation>
        <value>Construction</value>
    </filters>
    <label>Construction</label>
</ListView>