Agentforce/force-app/main/default/objects/SIC_Code__c/listViews/Government_Public_Sector.listView-meta.xml
<ListView>
    <fullName>Government_Public_Sector</fullName>
    <columns>NAME</columns>
    <columns>Sector__c</columns>
    <columns>Sub_Sector__c</columns>
    <columns>OCS_Sector__c</columns>
    <columns>OCS_Sub_Sector__c</columns>
    <columns>Customer_Sector__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OCS_Sector__c</field>
        <operation>equals</operation>
        <value>Government &amp; Public Sector</value>
    </filters>
    <label>Government &amp; Public Sector</label>
</ListView>