Agentforce/force-app/main/default/objects/SIC_Code__c/listViews/Mining.listView-meta.xml
<ListView>
    <fullName>Mining</fullName>
    <columns>NAME</columns>
    <columns>Sector__c</columns>
    <columns>Sub_Sector__c</columns>
    <columns>OCS_Sector__c</columns>
    <columns>OCS_Sub_Sector__c</columns>
    <columns>Customer_Sector__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OCS_Sector__c</field>
        <operation>equals</operation>
        <value>Mining</value>
    </filters>
    <label>Mining</label>
</ListView>