Agentforce/force-app/main/default/objects/SIC_Code__c/listViews/Property_Management_FM_Services.listView-meta.xml
<ListView>
    <fullName>Property_Management_FM_Services</fullName>
    <columns>NAME</columns>
    <columns>Sector__c</columns>
    <columns>Sub_Sector__c</columns>
    <columns>OCS_Sector__c</columns>
    <columns>OCS_Sub_Sector__c</columns>
    <columns>Customer_Sector__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OCS_Sector__c</field>
        <operation>equals</operation>
        <value>Property Management &amp; FM Services</value>
    </filters>
    <label>Property Management &amp; FM Services</label>
</ListView>